tests/bad/value_enums/constructor_wrong_types.oc
/// fail: Foo::Case2 field 0 has type str, but got u32

venum Foo {
    Case0(i32)
    Case1(str, i32)
    Case2(str)
    Case3
}

def main() {
    let foo: Foo = Case2(7)
}